--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "^7.13.14",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.13.13",
+    "@babel/preset-typescript": "^7.13.0",
     "@parcel/transformer-sass": "^2.0.0-beta.2",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
