--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@types/react-router": "^5.1.13",
     "babel-loader": "^8.2.2",
     "concurrently": "^6.0.1",
+    "eslint": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "parcel": "^2.0.0-beta.2"
   },
   "dependencies": {
