--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "concurrently -k \"tsc --watch --noEmit\" \"parcel serve ./src/index.html\"",
+    "start": "concurrently -k \"tsc --watch\" \"parcel serve ./src/index.html\"",
     "build": "parcel build ./src/index.html"
   },
   "keywords": [],
