--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "jsx": "react-jsx", /* Specify JSX code generation: 'preserve', 'react-native', 'react', 'react-jsx' or 'react-jsxdev'. */
     "sourceMap": true, /* Generates corresponding '.map' file. */
     // "outFile": "./",                             /* Concatenate and emit output to single file. */
-    "outDir": "./dist", /* Redirect output structure to the directory. */
+    "outDir": "./.intermediate", /* Redirect output structure to the directory. */
     "rootDir": "./src", /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     // "removeComments": true,                      /* Do not emit comments to output. */
     "noEmitOnError": true, /* Do not emit outputs. */
