--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-router": "^5.2.0"
   }
 }
