--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@parcel/transformer-react-refresh-babel": "^2.0.0-alpha.3",
     "@parcel/transformer-react-refresh-wrap": "^2.0.0-alpha.3",
     "@parcel/transformer-sass": "^2.0.0-nightly.638",
+    "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@types/react-router": "^5.1.13",
@@ -33,6 +34,7 @@
     "parcel": "^2.0.0-beta.2"
   },
   "dependencies": {
+    "node": "^15.12.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
