--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
-    "@types/react-router": "^5.1.13",
+    "@types/react-router-dom": "^5.1.7",
     "babel-loader": "^8.2.2",
     "concurrently": "^6.0.1",
     "eslint": "^7.24.0",
@@ -39,6 +39,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
-    "react-router": "^5.2.0"
+    "react-router-dom": "^5.2.0"
   }
 }
