--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@parcel/transformer-react-refresh-babel": "^2.0.0-alpha.3",
     "@parcel/transformer-react-refresh-wrap": "^2.0.0-alpha.3",
     "@parcel/transformer-sass": "^2.0.0-nightly.638",
+    "@types/axios": "^0.14.0",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
@@ -34,6 +35,7 @@
     "parcel": "^2.0.0-beta.2"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "node": "^15.12.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
