--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-redux": "^7.2.3",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "regenerator-runtime": "^0.13.5",
+    "unsplash-js": "^7.0.10"
   }
 }
