--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@types/react-router-dom": "^5.1.7",
+    "@types/uuid": "^8.3.0",
     "babel-loader": "^8.2.2",
     "concurrently": "^6.0.1",
     "eslint": "^7.24.0",
@@ -44,6 +45,7 @@
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "regenerator-runtime": "^0.13.5",
-    "unsplash-js": "^7.0.10"
+    "unsplash-js": "^7.0.10",
+    "uuid": "^3.4.0"
   }
 }
