--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -3,10 +3,10 @@
 # username = DB의 ID
 # password = DB의 Password
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://one-line-database2.cenm5adidlib.ap-northeast-2.rds.amazonaws.com:3306/one_line?characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://localhost:3306/study?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://one-line-database2.cenm5adidlib.ap-northeast-2.rds.amazonaws.com:3306/one_line?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+#spring.datasource.url=jdbc:mysql://localhost:3306/study?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=oneline-1234
 
 
 # spring.jpa.hibernate.ddl-auto 의 옵션
