--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
+    "@types/redux-thunk": "^2.1.0",
     "@types/uuid": "^8.3.0",
     "babel-loader": "^8.2.2",
     "concurrently": "^6.0.1",
@@ -44,6 +46,7 @@
     "react-google-login": "^5.2.2",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
+    "redux-thunk": "^2.3.0",
     "regenerator-runtime": "^0.13.5",
     "unsplash-js": "^7.0.10",
     "uuid": "^3.4.0"
