merge: main merge pull 내용 합치기

--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,1 +1,26 @@
+# MySQL Database 설정하는 부분
+# url = DB의 IP 및 데이터베이스 명
+# username = DB의 ID
+# password = DB의 Password
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://one-line-database2.cenm5adidlib.ap-northeast-2.rds.amazonaws.com:3306/oneline?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+#spring.datasource.url=jdbc:mysql://localhost:3306/study?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+spring.datasource.username=root
+spring.datasource.password=oneline1234
 
+
+# spring.jpa.hibernate.ddl-auto 의 옵션
+#   update : 기존의 스키마를 유지하며 JPA에 의해 변경된 부분만 추가한다.
+#   validate : 엔티티와 테이블이 정상적으로 매핑되어있는지만 검증한다.
+#   create : 기존에 존재하는 스키마를 삭제하고 새로 생성한다.
+#   create-drop : 스키마를 생성하고 애플리케이션이 종료될 때 삭제한다.
+#   none : 초기화 동작을 하지 않는다.
+spring.jpa.hibernate.ddl-auto=none
+
+# spring.jpa.hibernate.ddl-auto 속성을 사용할지 말지 결정(default = false)
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=true
+
+# 애플리케이션 실행 시 schema.sql, data.sql 파일을 함께 실행하도록 설정
+#spring.datasource.schema=classpath:schema.sql
+#spring.datasource.initialization-mode=always
