--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,7 @@
     "@babel/typescript"
   ],
   "plugins": [
-    "@babel/plugin-proposal-class-properties"
+    "@babel/plugin-proposal-class-properties",
+    "@babel/proposal-object-rest-spread"
   ]
 }
