--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "start": "parcel serve ./src/index.html",
-    "build": "parcel build ./src/index.html"
+    "build": "parcel build ./src/index.html",
+    "build-lib": "babel ./src --out-dir lib --extensions \".ts,.tsx\""
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@babel/core": "^7.13.14",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
@@ -24,6 +26,8 @@
     "@parcel/transformer-react-refresh-babel": "^2.0.0-alpha.3",
     "@parcel/transformer-react-refresh-wrap": "^2.0.0-alpha.3",
     "@parcel/transformer-sass": "^2.0.0-beta.2",
+    "@parcel/transformer-typescript-tsc": "^2.0.0-beta.2",
+    "@parcel/validator-typescript": "^2.0.0-beta.2",
     "@types/axios": "^0.14.0",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
