--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "parcel serve ./src/index.html",
-    "build": "parcel build ./src/index.html",
+    "start": "parcel serve \"./src/index.html\"",
+    "build": "parcel build \"./src/index.html\" --dist-dir ./build/output",
     "build-lib": "babel ./src --out-dir lib --extensions \".ts,.tsx\""
   },
   "keywords": [],
