--- a/back/pom.xml
+++ b/back/pom.xml
@@ -99,7 +99,7 @@
 				<version>1.9.1</version>
 				<configuration>
 					<!-- package.json 파일이 존재하는 디렉토리 지정 -->
-					<workingDirectory>front</workingDirectory>
+					<workingDirectory>../front</workingDirectory>
 					<!-- node, npm이 설치될 디렉토리 -->
 					<installDirectory>target</installDirectory>
 				</configuration>
@@ -110,8 +110,8 @@
 							<goal>install-node-and-npm</goal>
 						</goals>
 						<configuration>
-							<nodeVersion>v16.0.0</nodeVersion>
-							<npmVersion>7.10.0</npmVersion>
+							<nodeVersion>v10.24.1</nodeVersion>
+							<npmVersion>6.14.12</npmVersion>
 						</configuration>
 					</execution>
 					<execution>
