--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -3,23 +3,23 @@
 
 name: GitHub-Action with Java Maven
 
-on:
+on: # 이벤트 감지, 워크플로우를 실행시키는 조건 설정
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
 
-jobs:
+jobs: # job - 하나의 인스턴스에서 여러 Step을 그룹시켜 실행하는 역할, 병렬로 실행
   build:
 
     runs-on: ubuntu-latest
 
-    steps:
+    steps: # 순차적으로 명령어 수행
       - uses: actions/checkout@v2
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'
-          distribution: 'adopt'
+          distribution: 'corretto'
       - name: Build with Maven
         run: mvn -B package --file pom.xml
