--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -20,6 +20,6 @@ jobs: # job - 하나의 인스턴스에서 여러 Step을 그룹시켜 실행하
         uses: actions/setup-java@v2
         with:
           java-version: '11'
-          distribution: 'corretto'
+          distribution: 'adopt'
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
+        run: mvn -B package --file back/pom.xml
