--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: GitHub-Action with Java Maven
+name: Oneline-GitHub Action
 
 on: # 이벤트 감지, 워크플로우를 실행시키는 조건 설정
   push:
