--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -21,5 +21,7 @@ jobs: # job - 하나의 인스턴스에서 여러 Step을 그룹시켜 실행하
         with:
           java-version: '11'
           distribution: 'adopt'
+      - name: Grant execute permission for mvnw
+        run: chmod +x /.mvnw
       - name: Build with Maven
-        run: mvn -B package --file back/pom.xml
+        run: ./mvnw clean build
