--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -22,6 +22,6 @@ jobs: # job - 하나의 인스턴스에서 여러 Step을 그룹시켜 실행하
           java-version: '11'
           distribution: 'adopt'
       - name: Grant execute permission for mvnw
-        run: chmod +x /.mvnw
+        run: chmod +x ./mvnw
       - name: Build with Maven
         run: ./mvnw clean build
