--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -5,21 +5,34 @@ name: Oneline-GitHub Action
 
 on: # 이벤트 감지, 워크플로우를 실행시키는 조건 설정
   push:
-    branches: [ main ]
+    branches: [ main ] # push 되면 실행될 브랜치 선택(main)
   pull_request:
-    branches: [ main ]
+    branches: [ main ] # push 되면 실행될 브랜치 선택(main)
 
 jobs: # job - 하나의 인스턴스에서 여러 Step을 그룹시켜 실행하는 역할, 병렬로 실행
   build:
-
     runs-on: ubuntu-latest
 
     steps: # 순차적으로 명령어 수행
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'
           distribution: 'adopt'
+
       - name: Build with Maven
         run: mvn -B package --file back/pom.xml
+
+      - name: Get Current Time
+        uses: 1466587594/get-current-time@v2
+        id: current-time
+        with:
+          format: YYYY-MM-DDTHH:mm:ss
+          utcOffset: "+09:00" # 기준이 UTC이기 때문에 한국시간인 KST를 맞추기 위해 +9시간 추가
+
+      - name: Print Current Time
+        run: echo "Current Time=${{steps.current-time.outputs.formattedTime}}" # current-time 에서 지정한 포맷대로 현재 시간 출력
+        shell: bash
