feat: Test deploy(change server port 8080 -> 5000)  - Elastic Beanstalk assumes that the application will listen on port 5000

--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# aws Elastic Beanstalk은 기본적으로 5000 포트에서 수신되도록 가정하기 때문에 포트 변경
+server.port=5000
+
 # MySQL Database 설정하는 부분
 # url = DB의 IP 및 데이터베이스 명
 # username = DB의 ID
