--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# aws Elastic Beanstalk은 기본적으로 5000 포트에서 수신되도록 가정하기 때문에 포트 변경
+# AWS Elastic Beanstalk은 기본적으로 5000 포트에서 수신되도록 가정하기 때문에 포트 변경
 server.port=5000
 
 # MySQL Database 설정하는 부분
