--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -42,7 +42,7 @@ jobs: # job - 하나의 인스턴스에서 여러 Step을 그룹시켜 실행하
         id: current-time
         with:
           format: YYYY-MM-DDTHH:mm:ss
-          utcOffset: "+09:00" # 기준이 UTC 이므로 한국시간인 KST 로 맞추기 위해 9시간을 더한다
+          utcOffset: "+09:00" # 기준이 UTC 이므로 한국시간인 KST 로 맞추기 위해 9시간을 더해준다
 
       # print time
       - name: Print Current Time
