--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,17 @@
 {
   "extends": [
-    "plugin:react-hooks/recommended"
+    "eslint:recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/recommended-requiring-type-checking",
+    "plugin:react/recommended",
+    "plugin:react-hooks/recommended",
+    "standard"
   ],
   "plugins": [
-    "react-hooks"
+    "react",
+    "react-hooks",
+    "@typescript-eslint"
   ],
   "rules": {
     "react-hooks/rules-of-hooks": "error",
