--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "parcel \"./src/index.html\" --open",
-    "build": "parcel build \"./src/index.html\" --dist-dir ./build/output --no-source-maps",
-    "build-lib": "babel ./src --out-dir lib --extensions \".ts,.tsx\""
+    "start": "parcel index.html --open",
+    "build": "parcel build index.html --no-source-maps"
   },
   "keywords": [],
   "author": "",
@@ -15,37 +14,27 @@
     "> 0.2%"
   ],
   "devDependencies": {
-    "@babel/core": "^7.14.0",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
-    "@babel/preset-env": "^7.13.12",
-    "@babel/preset-react": "^7.13.13",
-    "@babel/preset-typescript": "^7.13.0",
-    "@parcel/transformer-sass": "^2.0.0-nightly.676",
-    "@types/node": "^14.14.37",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "@types/uuid": "^8.3.0",
-    "babel-loader": "^8.2.2",
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
     "eslint": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "redux-devtools-extension": "^2.13.9"
+    "redux-devtools-extension": "^2.13.9",
+    "sass": "^1.34.1",
+    "typescript": "^3.9.9"
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "node": "^15.12.0",
-    "node-sass": "^5.0.0",
-    "parcel": "^2.0.0-beta.2",
+    "parcel-bundler": "^1.12.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "redux-thunk": "^2.3.0",
-    "regenerator-runtime": "^0.13.5",
-    "typescript": "^3.9.9",
     "unsplash-js": "^7.0.10",
     "uuid": "^3.4.0"
   }
