--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,15 +1,12 @@
 # AWS Elastic Beanstalk은 기본적으로 5000 포트에서 수신되도록 가정하기 때문에 포트 변경
-server.port=5000
+server.port=8080
 
 # MySQL Database 설정하는 부분
 # url = DB의 IP 및 데이터베이스 명
 # username = DB의 ID
 # password = DB의 Password
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://one-line-database2.cenm5adidlib.ap-northeast-2.rds.amazonaws.com:3306/oneline?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
 #spring.datasource.url=jdbc:mysql://localhost:3306/study?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
-spring.datasource.username=root
-spring.datasource.password=oneline1234
 
 
 # spring.jpa.hibernate.ddl-auto 의 옵션
@@ -34,4 +31,4 @@ spring.jpa.show-sql=true
 # 스프링 부트에서는 properties의 이름을 application-xxx.properties 로 만들면
 # xxx라는 이름의 profile이 생성되어 이를 통해 관리할 수 있음
 # 즉, profile=xxx 라는 식으로 호출하면 해당 properties의 설정들을 가져올 수 있음
-spring.profiles.include=oauth
+#spring.profiles.include=oauth
