--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -7,6 +7,8 @@ server.port=8080
 # password = DB의 Password
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://localhost:3306/study?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+spring.datasource.username=root
+spring.datasource.password=1234
 
 
 # spring.jpa.hibernate.ddl-auto 의 옵션
