--- a/back/.gitignore
+++ b/back/.gitignore
@@ -31,3 +31,7 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Database ###
+/src/main/resources/application-dev.properties
+/src/main/resources/application-prod.properties
