--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -24,3 +24,6 @@ spring.jpa.show-sql=true
 # xxx라는 이름의 profile이 생성되어 이를 통해 관리할 수 있음
 # 즉, profile=xxx 라는 식으로 호출하면 해당 properties의 설정들을 가져올 수 있음
 #spring.profiles.include=oauth
+
+# use placeholder
+spring.profiles.active=@spring.profiles.active@
