add: Update Github Action maven profile - prod

--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -34,7 +34,8 @@ jobs: # job - 하나의 인스턴스에서 여러 Step을 그룹시켜 실행하
 
       # build
       - name: Build with Maven
-        run: mvn -B package --file back/pom.xml -Pprods
+        run: mvn -B package --file back/pom.xml -Pprod
+        #run: mvnw clean package -Pprod
 
       # time
       - name: Get Current Time
