--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -15,6 +15,13 @@ spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
 
 
+# DB localhost
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/study?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+spring.datasource.username=root
+spring.datasource.password=1234
+
+
 # 애플리케이션 실행 시 schema.sql, data.sql 파일을 함께 실행하도록 설정
 #spring.datasource.schema=classpath:schema.sql
 #spring.datasource.initialization-mode=always
