--- a/back/pom.xml
+++ b/back/pom.xml
@@ -121,6 +121,14 @@
 				</configuration>
 			</plugin>
 
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<skipTests>true</skipTests>
+				</configuration>
+			</plugin>
+
 			<!-- jacoco -->
 			<plugin>
 				<groupId>org.jacoco</groupId>
